<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.AddUpdateDishActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        app:titleTextColor="@color/white"
        app:title="@string/addDishTitle"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="wrap_content">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/_200sdp">

               <ImageView
                   android:id="@+id/addDishImage"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:contentDescription="@string/addDishImage"
                   app:srcCompat="@color/material_dynamic_neutral70"
                   tools:ignore="ImageContrastCheck" />
           </FrameLayout>
               <ImageView
                   android:layout_marginEnd="@dimen/_25sdp"
                   android:layout_marginBottom="@dimen/_10sdp"
                   android:layout_width="@dimen/_50sdp"
                   android:layout_height="@dimen/_50sdp"
                   android:src="@drawable/ic_baseline_camera_add"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentEnd="true"
                   android:contentDescription="@string/addImageDialog"
                   />
           </RelativeLayout>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_marginStart="@dimen/_10sdp"
               android:layout_marginEnd="@dimen/_10sdp"
               android:layout_marginTop="@dimen/_20sdp"
               app:boxStrokeColor="@color/grey"
               app:hintTextColor="@color/grey"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_height="wrap_content"
               android:padding="@dimen/_5sdp"
               android:id="@+id/TitleLayout">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/titleEditText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/_2sdp"
                   android:fontFamily="sans-serif-light"
                   android:hint="@string/addTitle"
                   android:textSize="16sp" />
           </com.google.android.material.textfield.TextInputLayout>


           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_marginStart="@dimen/_10sdp"
               android:layout_marginEnd="@dimen/_10sdp"
               app:boxStrokeColor="@color/grey"
               app:hintTextColor="@color/grey"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_height="wrap_content"
               android:padding="@dimen/_5sdp"
               android:id="@+id/categoryLayout">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/categoryEditText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/_2sdp"
                   android:fontFamily="sans-serif-light"
                   android:hint="@string/addCategory"
                   android:textSize="16sp" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_marginStart="@dimen/_10sdp"
               android:layout_marginEnd="@dimen/_10sdp"
               app:boxStrokeColor="@color/grey"
               app:hintTextColor="@color/grey"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_height="wrap_content"
               android:padding="@dimen/_5sdp"
               android:id="@+id/ingredientLayout">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/ingredientEditText"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_200sdp"
                   android:layout_margin="@dimen/_2sdp"
                   android:fontFamily="sans-serif-light"
                   android:gravity="top"
                   android:hint="@string/addIngredient"
                   android:inputType="textMultiLine"
                   android:textSize="16sp" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_marginStart="@dimen/_10sdp"
               android:layout_marginEnd="@dimen/_10sdp"
               app:boxStrokeColor="@color/grey"
               app:hintTextColor="@color/grey"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_height="wrap_content"
               android:padding="@dimen/_5sdp"
               android:id="@+id/cookLayout">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/directionEditText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/_2sdp"
                   android:fontFamily="sans-serif-light"
                   android:hint="@string/addDirection"
                   android:textSize="16sp" />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_marginStart="@dimen/_10sdp"
               android:layout_marginEnd="@dimen/_10sdp"
               app:boxStrokeColor="@color/grey"
               app:hintTextColor="@color/grey"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_height="wrap_content"
               android:padding="@dimen/_5sdp"
               android:id="@+id/timeLayout">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/timeEditText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/_2sdp"
                   android:fontFamily="sans-serif-light"
                   android:hint="@string/addTime"
                   android:textSize="16sp" />
           </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:text="@string/addDish"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"/>
       </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>